# mpcgs

./: .clang-format  .gitignore  COPYING  Makefile  Makefile.am  Makefile.in  README.md  aligned_seq.h  configure  configure.ac  configure.in  cudaheaders.h  genealogy.c  genealogy.cu  genealogy.h  main.c  main.cu  maxlike.cu  maxlike.h  mlgene.c  newdata3.theta12a.phy  notes  phylip.cu  phylip.h  sampleset.c  sampleset.h  seqsmp.c  seqsmp.h  sequence.c  sequence.h  testdata.12.200.phy  testdata.12.2000.phy  testdata.12.3000.phy  testdata.4.theta0.5.phy  testdata.4.theta3.0.phy  testdata.phy  testdata.theta12.phy  testdata.theta2.phy  testdata.theta4.phy  upgma.c  (+1 more)
include/: debug.h  mpcgs-gpu.h  mpcgs.h  phylip.h  tree.cuh  tree.h
output/: output.1  output.2
sfmt/: Makefile.am
src/: Makefile.am  Makefile.in  debug.c  dummy.c  main.c  mpcgs-gpu.cu  mpcgs.c  phylip.c  tree-gpu.cu  tree.c
test/: seqfile.12.200.4.phy  testdat.phy
